Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2.15
-
Component/s: Replication
-
Labels:None
Description
Row based replication stopped with
Last_Errno: 1677
|
Last_Error: Column 23 of table 'HALLEY.ANANCHC' cannot be converted from type 'varchar(20)' to type 'varchar(20)'
|
unless
slave_type_conversion=ALL_NON_LOSSY
|
was enabled.
The types in the error message are both `varchar(20)`, and `SHOW CREATE TABLE` output and even `.frm` file contents are exactly the same on master and slave.
There was a BINLOG'...' provided that indeed contained encoded length for the col #23 as 20 (bytes). The actual column on slave has it 60, due to UTF8.